<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loop</string>
    <string name="loop_title_hint">What title best describes what you\'ll be doing?</string>
    <string name="loop_title_label">Title</string>
    <string name="loop_time_and_place_label">Time and Place</string>
    <string name="loop_recurring_label">Recurring?</string>
    <string name="loops_title">Loops</string>
    <string name="date_picker_title">Date of next loop:</string>
    <string name="time_picker_title">Time of next loop:</string>
    <string name="loop_category_label">Category Details</string>
    <string name="new_loop">New Loop</string>
    <string name="delete_loop">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="save_loop">Save Loop</string>

    <string name="category_academic_title_label">Academic</string>
    <string name="category_academic_isForACourse_label">For a Class?</string>
    <string name="category_academic_cn_hint">Course #</string>


    <color name="Teal_50">#e0f2f1</color>
    <color name="Teal_100">#b2dfdb</color>
    <color name="accent">#80cbc4</color>
    <color name="Teal_300">#4db6ac</color>
    <color name="Teal_400">#26a69a</color>
    <color name="primary">#009688</color>
    <color name="Teal_600">#00897b</color>
    <color name="Teal_700">#00796b</color>
    <color name="Teal_800">#00695c</color>
    <color name="primary_dark">#004d40</color>
    <color name="Teal_A100">#a7ffeb</color>
    <color name="primary_pressed">#00897b</color>
    <color name="ripple">#b2dfdb</color>

    <string name="title_activity_login">Login to Loop</string>

</resources>
